# togru

./: .gitignore  README.md  create_audit.sql  db_schema.sql  gunicorn_conf.py  import_excel_cli.py  import_excel_cli_sql.py  import_excel_cli_sql_didattica.py  pyproject.toml  separate_multi-sheet_xlsx.py  togru.py  wsgi.py
static/: .~lock.esempio.xlsx#  1.html  accademia_p-1.html  accademia_p0.html  accademia_p1.html  accademia_p2.html  accademia_p3.html  esempio.xlsx  grugliasco_p-1.html  grugliasco_p0.html  grugliasco_p1.html  grugliasco_p2.html  mappe_grugliasco.html  mappe_torino.html  ortobotanico_p-1.html  ortobotanico_p-2.html  ortobotanico_p0.html  ortobotanico_p1.html  ortobotanico_p2.html  palazzo_campana_p2.html  quarello_p-1.html  quarello_p-2.html  quarello_p0.html  quarello_p1.html  static_header.css  style.css
templates/: aggiungi.html  aggiungi_user.html  attivita_utente.html  attivita_utenti.html  duplica_bene.html  index.html  mappe.html  menu.html  modifica.html  search.html  search_gruppo_ricerca.html  search_responsabile.html  search_sipi_torino.html  search_struttura.html  storico.html  storico_utente.html  table.html  tutti_record.html  upload_excel.html  view.html
