[project]
name = "togru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "google-auth>=2.40.1",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "sqlalchemy>=2.0.41",
    "xlsxwriter>=3.2.3",
]
